--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,13 @@
-/* Sayfa genel ayarları */
 body {
   margin: 0;
   padding: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  background: #f5f5f5;
+  background: #f9f6f6;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
 }
-
-/* Ana container */
 .container {
   width: 100%;
   max-width: 500px;
@@ -20,31 +17,21 @@ body {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   border-radius: 8px;
 }
-
-/* Başlık */
-.container h1 {
+.container h1{
   text-align: center;
   margin-bottom: 20px;
   color: #333;
 }
-
-/* Görev ekleme alanı */
 .add-task {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-
 .add-task i {
   font-size: 20px;
   cursor: pointer;
-  color: #007BFF;
+  color: #0e82fe;
 }
-
-#input.hidden {
-  display: none;
-}
-
 #input {
   flex: 1;
   display: flex;
@@ -55,84 +42,51 @@ body {
   flex: 1;
   padding: 10px;
   font-size: 15px;
-  border: 1px solid #ccc;
+  border: 1 px solid #ccc;
   border-radius: 5px;
 }
-
-#addtaskbtn {
+#addTaskbtn{
   padding: 0 14px;
   font-size: 20px;
   cursor: pointer;
-  background: #007BFF;
+  background: #0e82fe;
   color: white;
   border: none;
   border-radius: 5px;
 }
 
-/* Filtre butonları */
 .filters {
   display: flex;
   justify-content: center;
   margin: 20px 0;
   gap: 10px;
 }
-
-.filter-btn {
+.filter-btn{
   padding: 6px 12px;
   border: 1px solid #ccc;
   background: #eee;
   border-radius: 5px;
   cursor: pointer;
 }
-
 .filter-btn.active {
-  background: #007BFF;
+  background: #0e82fe;
   color: white;
-  border-color: #007BFF;
+  border-color:#0e82fe ;
 }
 
-/* Görev listesi */
-#tasklist {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
 
-.task-item {
-  background: #f9f9f9;
-  padding: 12px 15px;
-  border-left: 5px solid #007BFF;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.2s ease;
-}
 
-.task-item.completed {
-  text-decoration: line-through;
-  color: #777;
-  border-left-color: green;
-}
 
-.task-item:hover {
-  background: #f1f1f1;
-}
 
-.task-item .actions button {
-  background: none;
-  border: none;
-  font-size: 16px;
-  cursor: pointer;
-}
 
-.task-item .actions {
-  display: flex;
-  gap: 10px;
-}
 
-.task-item .log {
-  font-size: 12px;
-  color: #888;
-  margin-top: 5px;
-}
+
+
+
+
+
+
+
+
+
+
