görev ekleme butonunun stili düzenlendi

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ display: none;
   border: 1 px solid #ccc;
   border-radius: 5px;
 }
-#addTaskbtn{
+#addtaskbtn{
   padding: 0 14px;
   font-size: 20px;
   cursor: pointer;
