silinen görevler için ayrı bir liste oluşturuldu,ve son silinen en üstte olacak şekilde sıralandı

--- a/assets/style.css
+++ b/assets/style.css
@@ -114,9 +114,14 @@ body {
   margin-top: 5px;
 }
 
-
-
-
+.task-item.deleted {
+  background-color: #fedddd;
+  color: #a00;
+  border-left-color: #a00;
+}
+.deleted-header{
+  color: #a00;
+}
 
 
 
